using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;
 internal class AnimationStrings 
{
    internal static String isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded= "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnCeiling = "isOnWall";
    internal static string isOnWall = "isOnCeiling";
    
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";

    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
}
